feat: Drop use of DatatypeConverter and use Java 8+ Base64